tests/fixtures/errors/unknown_unit.gcl
// error: unknown unit
node x: Length = 100.0 foobar;
